--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  background-image: url(/images/background.png);
+  background-image: url(images/background.png);
 }
 
 #title {
